fix sponsors logo ratio on smaller screen

--- a/css/main.css
+++ b/css/main.css
@@ -1310,19 +1310,14 @@ h6 {
     margin: 28px 0 0; }
     .shedule-list__item {
       margin: 10px 0 0; }
-  .sponsors-block__img-wrap {
-    margin: 20px 0;
-    width: 32%;
-    height: 32%;
-    max-height: 122px;
-    text-align: center; }
+  .sponsors-gold .sponsors-block__img-wrap {
+    width: 40%; }
+  .sponsors-bronze .sponsors-block__img-wrap,
+  .sponsors-silver .sponsors-block__img-wrap {
+    width: 25%; }
   .sponsors-block__img {
-    display: inline-block;
-    width: auto;
-    height: auto;
-    margin: 0 auto;
-    max-width: 80%;
-    max-height: 100%; }
+    width: 100%;
+    height: auto; }
   .sponsors-block__desc, .sponsors-block__subtitle {
     margin: 30px 0 20px; } }
 
